--- a/catalogue.html
+++ b/catalogue.html
@@ -423,42 +423,6 @@
               />
             </picture>
           </article>
-          <!--   card 15 -->
-          <article class="card">
-            <picture class="thumbnail">
-              <img
-                src="assets/CATALOGUE/DINO AVATAR/DINO 15.png"
-                onclick="show('modal_15')"
-              />
-            </picture>
-          </article>
-          <!--   card 16 -->
-          <article class="card">
-            <picture class="thumbnail">
-              <img
-                src="assets/CATALOGUE/DINO AVATAR/DINO 16.png"
-                onclick="show('modal_16')"
-              />
-            </picture>
-          </article>
-          <!--   card 17 -->
-          <article class="card">
-            <picture class="thumbnail">
-              <img
-                src="assets/CATALOGUE/DINO AVATAR/DINO 17.png"
-                onclick="show('modal_17')"
-              />
-            </picture>
-          </article>
-          <!--   card 18 -->
-          <article class="card">
-            <picture class="thumbnail">
-              <img
-                src="assets/CATALOGUE/DINO AVATAR/DINO 18.png"
-                onclick="show('modal_18')"
-              />
-            </picture>
-          </article>
         </div>
       </div>
     </main>
@@ -1275,7 +1239,7 @@
     <!---------------x------------------ Main -----------------x---------------->
 
     <!---------------------------------- Footer ---------------------------------->
-    <!-- <footer class="footer"></footer> -->
+    <footer class="footer"></footer>
     <!---------------x------------------ Footer -----------------x---------------->
 
     <!-- Jquery Library file -->
