--- a/en/playGame.html
+++ b/en/playGame.html
@@ -4,37 +4,57 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- --------- Owl-Carousel ------------------->
-    <link rel="stylesheet" href="./css/owl.carousel.min.css" />
-    <link rel="stylesheet" href="./css/owl.theme.default.min.css" />
+    <link rel="shortcut icon" href="../assets/shortcut-icon.png" />
 
     <!-- --------- Custome css ------------------->
-    <link rel="stylesheet" href="./css/playGame.css" />
+    <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="../css/playGame.css" />
     <title>DinoZone</title>
   </head>
   <body>
     <!---------------------------------- Top Bar ---------------------------------->
     <div class="nav">
-      <div class="top-bar-left">
-        <img class="logo" src="assets/LOGO.png" />
+      <div class="top-bar">
+        <div class="logo">
+          <a href="../index.html"><img src="../assets/LOGO.png" /></a>
+        </div>
+
+        <input type="checkbox" id="overlay-input" />
+        <label for="overlay-input" id="overlay-button"><span></span></label>
+        <div id="overlay">
+          <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../en/catalogue.html">catalogue</a></li>
+            <li><a href="../en/games.html">games</a></li>
+            <li><a href="../en/books.html">books</a></li>
+            <li><a href="../en/movies.html">movies</a></li>
+            <li>
+              <img
+                class="language"
+                onclick="changeLanguage('vn')"
+                src="../assets/CỜ ANH MINI.png"
+              />
+            </li>
+          </ul>
+        </div>
+
         <div class="top-menu">
-          <img class="language" src="assets/CỜ ANH MINI.png" />
+          <img
+            class="language"
+            onclick="changeLanguage('vn')"
+            src="../assets/CỜ ANH MINI.png"
+          />
           <div class="menu">
-            <div class="menu-item">
-              <img src="assets/NÚT.png" />
+            <div class="menu-item" onclick="redirect('catalog')">
               <p>catalogue</p>
             </div>
-            <div class="menu-item">
-              <img src="assets/NÚT.png" />
+            <div class="menu-item" onclick="redirect('game')">
               <p>games</p>
             </div>
-            <div class="menu-item">
-              <img src="assets/NÚT.png" />
+            <div class="menu-item" onclick="redirect('book')">
               <p>books</p>
             </div>
-            <div class="menu-item">
-              <img src="assets/NÚT.png" />
+            <div class="menu-item" onclick="redirect('movie')">
               <p>movies</p>
             </div>
           </div>
@@ -46,7 +66,7 @@
     <!---------------------------------- Main ---------------------------------->
     <main>
       <div class="banner">
-        <div class="loading"></div>
+        <img src="../assets/GAMES/LOADING .png" />
       </div>
       <div class="game-list">
         <div class="list-item">
@@ -56,26 +76,26 @@
           <div class="group-game">
             <div class="game-item">
               <div class="game-img">
-                <img src="assets/GAMES/GAME 6.png" />
+                <img src="../assets/GAMES/GAME 6.png" />
               </div>
               <div class="game-title">
-                <p>dinos jump</p>
+                <p>DINOSAURS FIX THE PATCH</p>
               </div>
             </div>
             <div class="game-item">
               <div class="game-img">
-                <img src="assets/GAMES/GAME 1.png" />
+                <img src="../assets/GAMES/GAME 1.png" />
               </div>
               <div class="game-title">
-                <p>dinos jump</p>
+                <p>DINO MEAT HUNT</p>
               </div>
             </div>
             <div class="game-item">
               <div class="game-img">
-                <img src="assets/GAMES/GAME 2.png" />
+                <img src="../assets/GAMES/GAME 2.png" />
               </div>
               <div class="game-title">
-                <p>dinos jump</p>
+                <p>DINO ZOO</p>
               </div>
             </div>
           </div>
@@ -85,13 +105,6 @@
         </div>
       </div>
     </main>
-    <!---------------------------------- slidebar ---------------------------------->
-
-    <!---------------x------------------ slidebar -----------------x---------------->
-
-    <!---------------------------------- content ---------------------------------->
-
-    <!---------------x------------------ content -----------------x---------------->
 
     <!---------------x------------------ Main -----------------x---------------->
 
@@ -100,12 +113,10 @@
     <!---------------x------------------ Footer -----------------x---------------->
 
     <!-- Jquery Library file -->
-    <script src="./js/Jquery3.6.0.min.js"></script>
-
-    <!-- Owl-Carousel js -->
-    <script src="./js/owl.carousel.min.js"></script>
+    <script src="../js/Jquery3.6.0.min.js"></script>
 
     <!-- Custome Javascript file -->
-    <script src="./js/book.js"></script>
+    <script src="../js/main.js"></script>
+    <script src="../js/playgame.js"></script>
   </body>
 </html>
