add reponsive for 1300px

--- a/en/games.html
+++ b/en/games.html
@@ -79,7 +79,10 @@
                 <img src="../assets/GAMES/GAME 6.png" />
               </div>
               <div class="game-title">
-                <p>dinos jump</p>
+                <p>
+                  dinos <br />
+                  jump
+                </p>
               </div>
             </div>
             <div class="game-item">
@@ -110,7 +113,10 @@
                 <img src="../assets/GAMES/GAME 3.png" />
               </div>
               <div class="game-title">
-                <p>DINO ZOO</p>
+                <p>
+                  DINO <br />
+                  ZOO
+                </p>
               </div>
             </div>
             <div class="game-item">
@@ -118,7 +124,10 @@
                 <img src="../assets/GAMES/GAME 6.png" />
               </div>
               <div class="game-title">
-                <p>DINOS JUMP</p>
+                <p>
+                  DINOS <br />
+                  JUMP
+                </p>
               </div>
             </div>
             <div class="game-item">
