--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
 
           <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
           <a class="next" onclick="plusSlides(1)">&#10095;</a>
-          <div class="group-dot">
+          <!-- <div class="group-dot">
             <span class="dot" onclick="currentSlide(1)"></span>
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
-          </div>
+          </div> -->
         </div>
       </div>
       <div class="catalog-container">
@@ -145,7 +145,13 @@
     <!---------------x------------------ Main -----------------x---------------->
 
     <!---------------------------------- Footer ---------------------------------->
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="copyright">
+        <p>
+          Copyright ©2021 All rights reserved | made by <a href="#">DinoZone</a>
+        </p>
+      </div>
+    </footer>
     <!---------------x------------------ Footer -----------------x---------------->
     <script src="./js/main.js"></script>
     <script src="./js/home.js"></script>
