--- a/vn/catalogue.html
+++ b/vn/catalogue.html
@@ -1154,7 +1154,13 @@
     <!---------------x------------------ Main -----------------x---------------->
 
     <!---------------------------------- Footer ---------------------------------->
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="copyright">
+        <p>
+          Copyright ©2021 All rights reserved | made by <a href="#">DinoZone</a>
+        </p>
+      </div>
+    </footer>
     <!---------------x------------------ Footer -----------------x---------------->
 
     <!-- Jquery Library file -->
