--- a/vn/books.html
+++ b/vn/books.html
@@ -80,19 +80,19 @@
           <div class="slidebar">
             <div class="owl-carousel owl-theme">
               <div class="item" onclick="show('modal_5')">
-                <img src="/../assets/BOOKS/MAIN_SITE/BOOK 5.png" />
+                <img src="../assets/BOOKS/MAIN_SITE/BOOK 5.png" />
               </div>
               <div class="item" onclick="show('modal_1')">
-                <img src="/../assets/BOOKS/MAIN_SITE/BOOK 1.png" />
+                <img src="../assets/BOOKS/MAIN_SITE/BOOK 1.png" />
               </div>
               <div class="item" onclick="show('modal_3')">
-                <img src="/../assets/BOOKS/MAIN_SITE/BOOK 3.png" />
+                <img src="../assets/BOOKS/MAIN_SITE/BOOK 3.png" />
               </div>
               <div class="item" onclick="show('modal_7')">
-                <img src="/../assets/BOOKS/MAIN_SITE/BOOK 7.png" />
+                <img src="../assets/BOOKS/MAIN_SITE/BOOK 7.png" />
               </div>
               <div class="item" onclick="show('modal_10')">
-                <img src="/../assets/BOOKS/MAIN_SITE/BOOK 10.png" />
+                <img src="../assets/BOOKS/MAIN_SITE/BOOK 10.png" />
               </div>
             </div>
           </div>
@@ -104,19 +104,19 @@
           <div class="slidebar">
             <div class="owl-carousel owl-theme">
               <div class="item" onclick="show('modal_3')">
-                <img src="/../assets/BOOKS/MAIN_SITE/BOOK 3.png" />
+                <img src="../assets/BOOKS/MAIN_SITE/BOOK 3.png" />
               </div>
               <div class="item" onclick="show('modal_9')">
-                <img src="/../assets/BOOKS/MAIN_SITE/BOOK 9.png" />
+                <img src="../assets/BOOKS/MAIN_SITE/BOOK 9.png" />
               </div>
               <div class="item" onclick="show('modal_8')">
-                <img src="/../assets/BOOKS/MAIN_SITE/BOOK 8.png" />
+                <img src="../assets/BOOKS/MAIN_SITE/BOOK 8.png" />
               </div>
               <div class="item" onclick="show('modal_11')">
-                <img src="/../assets/BOOKS/MAIN_SITE/BOOK 11.png" />
+                <img src="../assets/BOOKS/MAIN_SITE/BOOK 11.png" />
               </div>
               <div class="item" onclick="show('modal_10')">
-                <img src="/../assets/BOOKS/MAIN_SITE/BOOK 10.png" />
+                <img src="../assets/BOOKS/MAIN_SITE/BOOK 10.png" />
               </div>
             </div>
           </div>
@@ -128,19 +128,19 @@
           <div class="slidebar">
             <div class="owl-carousel owl-theme">
               <div class="item" onclick="show('modal_2')">
-                <img src="/../assets/BOOKS/MAIN_SITE/BOOK 2.png" />
+                <img src="../assets/BOOKS/MAIN_SITE/BOOK 2.png" />
               </div>
               <div class="item" onclick="show('modal_1')">
-                <img src="/../assets/BOOKS/MAIN_SITE/BOOK 1.png" />
+                <img src="../assets/BOOKS/MAIN_SITE/BOOK 1.png" />
               </div>
               <div class="item" onclick="show('modal_4')">
-                <img src="/../assets/BOOKS/MAIN_SITE/BOOK 4.png" />
+                <img src="../assets/BOOKS/MAIN_SITE/BOOK 4.png" />
               </div>
               <div class="item" onclick="show('modal_7')">
-                <img src="/../assets/BOOKS/MAIN_SITE/BOOK 7.png" />
+                <img src="../assets/BOOKS/MAIN_SITE/BOOK 7.png" />
               </div>
               <div class="item" onclick="show('modal_11')">
-                <img src="/../assets/BOOKS/MAIN_SITE/BOOK 11.png" />
+                <img src="../assets/BOOKS/MAIN_SITE/BOOK 11.png" />
               </div>
             </div>
           </div>
@@ -152,13 +152,13 @@
           <div class="slidebar">
             <div class="owl-carousel owl-theme">
               <div class="item" onclick="show('modal_5')">
-                <img src="/../assets/BOOKS/MAIN_SITE/BOOK 5.png" />
+                <img src="../assets/BOOKS/MAIN_SITE/BOOK 5.png" />
               </div>
               <div class="item" onclick="show('modal_2')">
-                <img src="/../assets/BOOKS/MAIN_SITE/BOOK 2.png" />
+                <img src="../assets/BOOKS/MAIN_SITE/BOOK 2.png" />
               </div>
               <div class="item" onclick="show('modal_9')">
-                <img src="/../assets/BOOKS/MAIN_SITE/BOOK 9.png" />
+                <img src="../assets/BOOKS/MAIN_SITE/BOOK 9.png" />
               </div>
             </div>
           </div>
